# gwTGA

./: .gitignore  README.md  cmake_build.sh  cmake_gcc_build.bat
cmake/: macros.cmake
source/: CMakeLists.txt  Test.cpp  gwTGA.cpp  gwTGA.h
test_images/: guitar_palette.tga  guitar_palette_rle.tga  mandrill_16.tga  mandrill_16_palette8.tga  mandrill_16rle.tga  mandrill_16rle_palette8.tga  mandrill_24.tga.test  mandrill_24_palette8.tga.test  mandrill_24rle.tga  mandrill_24rle.tga.test  mandrill_24rle_palette8.tga  mandrill_24rle_palette8.tga.test  mandrill_32.tga  mandrill_32_palette8.tga  mandrill_32_palette8.tga.test  mandrill_32rle.tga  mandrill_32rle.tga.test  mandrill_32rle_palette8.tga  mandrill_8.tga  mandrill_8.tga.test  mandrill_8_palette8.tga  mandrill_8_palette8.tga.test  mandrill_8rle.tga  mandrill_8rle_palette8.tga
